--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.2.1",
     "ngx-bootstrap": "^1.8.1",
     "rxjs": "^5.4.1",
+    "store": "^2.0.12",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
