--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-bootstrap": "^1.8.1",
     "rxjs": "^5.4.1",
     "store": "^2.0.12",
+    "sweetalert2": "^6.7.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
