--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-validation": "^4.2.0",
     "ngx-bootstrap": "^1.8.1",
     "rxjs": "^5.4.1",
     "store": "^2.0.12",
