--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "file-saver": "^1.3.3",
     "jquery": "^3.2.1",
+    "ng2-file-upload": "^1.2.1",
     "ng2-validation": "^4.2.0",
     "ngx-bootstrap": "^1.8.1",
     "rxjs": "^5.4.1",
