--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "element-angular": "^0.6.6",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
