--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.8",
-    "@angular/cdk": "github:angular/cdk-builds",
+    "@angular/animations": "^5.2.8",  
     "@angular/common": "^5.2.8",
     "@angular/compiler": "^5.2.8",
     "@angular/core": "^5.2.8",
     "@angular/forms": "^5.2.8",
     "@angular/http": "^5.2.8",
-    "@angular/material": "github:angular/material2-builds",
+    "@angular/material": "^5.2.4",
+    "@angular/cdk": "^5.2.4",
     "@angular/platform-browser": "^5.2.8",
     "@angular/platform-browser-dynamic": "^5.2.8",
     "@angular/router": "^5.2.8",
@@ -27,7 +27,7 @@
     "@ngrx/effects": "^4.0.2",
     "@ngrx/store": "^4.1.1",
     "angular2-jwt": "^0.2.3",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0",
     "core-js": "^2.4.1",
     "element-angular": "^0.6.6",
     "file-saver": "^1.3.3",
