--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/effects": "^4.0.2",
     "@ngrx/store": "^4.1.1",
     "angular2-jwt": "^0.2.3",
+    "animate.css": "^3.6.1",
     "bootstrap": "4.0.0",
     "core-js": "^2.4.1",
     "element-angular": "^0.6.6",
