--- a/package.json
+++ b/package.json
@@ -13,37 +13,36 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.0.7",
-    "@angular/cdk": "^5.2.4",
+    "@angular/cdk": "^6.3.2",
     "@angular/common": "6.0.7",
     "@angular/compiler": "6.0.7",
     "@angular/core": "6.0.7",
     "@angular/forms": "6.0.7",
     "@angular/http": "6.0.7",
-    "@angular/material": "^5.2.4",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "6.0.7",
     "@angular/platform-browser-dynamic": "6.0.7",
     "@angular/router": "6.0.7",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^4.0.2",
-    "@ngrx/store": "^4.1.1",
-    "angular2-jwt": "^0.2.3",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
     "animate.css": "^3.6.1",
     "bootstrap": "4.0.0",
     "core-js": "^2.4.1",
-    "element-angular": "^0.7.4",
+    "element-angular": "^0.7.6",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ng2-file-upload": "^1.2.1",
     "ng2-validation": "^4.2.0",
-    "ngx-bootstrap": "^2.0.2",
-    "primeng": "^5.2.4",
+    "ngx-bootstrap": "^3.0.1",
+    "primeng": "^6.0.0",
     "rxjs": "^6.2.1",
     "store": "^2.0.12",
     "sweetalert2": "^6.7.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "6.0.7",
     "@angular/language-service": "6.0.7",
@@ -53,16 +52,15 @@
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.3.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "2.7.2"
   }
 }
