--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "@ngrx/effects": "^6.0.1",
     "@ngrx/store": "^6.0.1",
     "animate.css": "^3.6.1",
-    "bootstrap": "4.0.0",
+    "bootstrap": "4.1.2",
     "core-js": "^2.4.1",
     "element-angular": "^0.7.6",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "ng2-file-upload": "^1.2.1",
+    "ng2-file-upload": "^1.3.0",
     "ng2-validation": "^4.2.0",
     "ngx-bootstrap": "^3.0.1",
+    "popper.js": "^1.14.3",
     "primeng": "^6.0.0",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.2.2",
     "store": "^2.0.12",
     "sweetalert2": "^6.7.0",
     "zone.js": "^0.8.26"
@@ -49,7 +50,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.102",
-    "codelyzer": "~3.0.1",
+    "codelyzer": "~4.4.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "^2.0.4",
