--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.7",
-    "@angular/cdk": "^6.3.2",
-    "@angular/common": "6.0.7",
-    "@angular/compiler": "6.0.7",
-    "@angular/core": "6.0.7",
-    "@angular/forms": "6.0.7",
-    "@angular/http": "6.0.7",
-    "@angular/material": "^6.3.3",
-    "@angular/platform-browser": "6.0.7",
-    "@angular/platform-browser-dynamic": "6.0.7",
-    "@angular/router": "6.0.7",
-    "@ngrx/effects": "^6.0.1",
-    "@ngrx/store": "^6.0.1",
+    "@angular/animations": "7.2.11",
+    "@angular/cdk": "^7.3.6",
+    "@angular/common": "7.2.11",
+    "@angular/compiler": "7.2.11",
+    "@angular/core": "7.2.11",
+    "@angular/forms": "7.2.11",
+    "@angular/http": "7.2.11",
+    "@angular/material": "^7.3.6",
+    "@angular/platform-browser": "7.2.11",
+    "@angular/platform-browser-dynamic": "7.2.11",
+    "@angular/router": "7.2.11",
+    "@ngrx/effects": "^7.4.0",
+    "@ngrx/store": "^7.4.0",
     "animate.css": "^3.6.1",
-    "bootstrap": "4.0.0",
+    "bootstrap": "4.3.1",
+    "popper.js": "1.14.7",
     "core-js": "^2.4.1",
     "element-angular": "^0.7.6",
     "file-saver": "^1.3.3",
@@ -42,17 +43,17 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.7",
-    "@angular/language-service": "6.0.7",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
+    "@angular-devkit/build-angular": "~0.13.7",
+    "@angular/cli": "7.3.7",
+    "@angular/compiler-cli": "7.2.11",
+    "@angular/language-service": "7.2.11",
+    "@types/jasmine": "~2.5.54",
+    "@types/jasminewd2": "~2.0.6",
     "@types/node": "^6.0.102",
-    "codelyzer": "~3.0.1",
+    "codelyzer": "4.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^2.0.4",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
@@ -61,6 +62,6 @@
     "protractor": "^5.3.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "2.7.2"
+    "typescript": "3.2.2"
   }
 }
